# llama.cpp

./: CMakeLists.txt
common/: arg.cpp  common.h
include/: llama.h
src/: llama-context.cpp  llama-context.h  llama-model-loader.cpp  llama-model-loader.h
tools/: CMakeLists.txt
tools/gui/: CMakeLists.txt
tools/gui/qml/: Main.qml  qml.qrc
tools/gui/src/: main.cpp
